--- a/src/extension/popup.html
+++ b/src/extension/popup.html
@@ -5,7 +5,7 @@
     <script type="module" src="popup.min.js"></script>
     <style>
         .stats {
-            width: 300px;
+            min-width: 300px;
         }
 
         .stats dl {
@@ -37,6 +37,8 @@
 <body>
     <h3 id="title">ZoomStats</h3>
     <div class="stats">
+    </div>
+    <div class="wordcloud">
     </div>
 </body>
 </html>
